--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Crash Test 😵</title>
-    <script>
-      const endTime = Date.now() + 60000; // 60 seconds freeze
+<head>
+  <title>Auto Open 5 Ads</title>
+  <script>
+    window.onload = function() {
+      const ads = [
+        'index.html',
+        'index.html',
+         'index.html',
+ 'index.html',
+ 'index.html',
+ 'index.html', 
 
-      // Infinite alert loop with block time
-      while (Date.now() < endTime) {
-        alert("🚨 System Crash! Wait...");
-      }
+        
+      ];
 
-      // Optional: After 1 min, redirect to safe page
-      window.location.href = "https://your-safe-page.com";
-    </script>
-  </head>
-  <body>
-  </body>
+      ads.forEach(url => {
+        window.open(url, '_blank');
+      });
+    };
+  </script>
+</head>
+<body>
+  <h2>Ads opening automatically on page load 🚀</h2>
+</body>
 </html>
